--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous" 
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="top-nav-style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/zbf4qyj.css" />
@@ -558,7 +558,7 @@
       <div class="container">
         <div class="content-edgebox">
           <div class="content-edgebox-inner">
-            <h2>Here’s how Randolph-Macon gives you the EDGE.</h2>
+            <h1>Here’s how Randolph-Macon gives you the EDGE.</h1>
             <p>
               At Randolph-Macon College, the EDGE Career Center provides you
               with a personalized, four-year plan that assures you a competitive
@@ -566,18 +566,18 @@
             </p>
           </div>
           <div class="content-edgebox-buttons-container">
-            <div class="content-edgebox-buttons">
+            <a href="#" class="content-edgebox-buttons">
               <h2>Career Preparation</h2>
-            </div>
-            <div class="content-edgebox-buttons">
+            </a>
+            <a href="#" class="content-edgebox-buttons">
               <h2>Internships</h2>
-            </div>
-            <div class="content-edgebox-buttons">
+            </a>
+            <a href="#" class="content-edgebox-buttons">
               <h2>Alumni Networking</h2>
-            </div>
-            <div class="content-edgebox-buttons">
+            </a>
+            <a href="#" class="content-edgebox-buttons">
               <h2>Get Started!</h2>
-            </div>
+            </a>
           </div>
         </div>
       </div>
